Fixed some minor layout issues

--- a/style.css
+++ b/style.css
@@ -117,11 +117,12 @@ body {
   .container {
     flex-direction: row;
     height: 60%;
-    width: 60%;
+    width: 50%;
   }
 
   .product-image {
     padding: 1.4rem;
+    width: 50%;
   }
   
   .product-image img {
@@ -133,7 +134,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     width: 50%;
-    
   }
 }
 
